updated README, added dbdiagram, updated styles and attempted to fix carousel collapse issue

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -182,8 +182,8 @@ html * {
 
 @media only screen and (min-width: 576px) {
     .imageContainer img {
-        max-height: 15%;
-        max-width: 15%;
+        max-height: 12.5%;
+        max-width: 12.5%;
         margin: 20px;
     }
 }
